superbitty/tests/ui/BitFieldCompatible/not_enum.stderr
error: only enums can `#[derive(BitFieldCompatible)]`
 --> tests/ui/BitFieldCompatible/not_enum.rs:4:1
  |
4 | struct Foo;
  | ^^^^^^^^^^^

error: only enums can `#[derive(BitFieldCompatible)]`
 --> tests/ui/BitFieldCompatible/not_enum.rs:7:1
  |
7 | union Bar {}
  | ^^^^^^^^^^^^

error: unions cannot have zero fields
 --> tests/ui/BitFieldCompatible/not_enum.rs:7:1
  |
7 | union Bar {}
  | ^^^^^^^^^^^^
