superbitty/tests/ui/BitFieldCompatible/not_enum.rs
use superbitty::BitFieldCompatible;

#[derive(BitFieldCompatible)]
struct Foo;

#[derive(BitFieldCompatible)]
union Bar {}

fn main() {}
